Updated test Fixed createLpc_onDuplicateNestedLibraryPrepBatch_throwValidationException